# apphatch

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: release.yml
docker/: Dockerfile  docker-compose.yml
scripts/: fetch-builds.sh
src/: cli.rs  desktop.rs  install.rs  main.rs  uninstall.rs  upgrade.rs  utils.rs
